- Many bug fixes in conics:
	+ fixed transform of Parabolas
	+ fixed transform and comparison of Ellipses
	+ fixed transform, clipping, computation of conic coefficients for Hyperbolas
	+ introduced construction of Ellipse from 2 focii
- Fixed clipping of boundaries

Coding
geom2d:
- introduced UnboundedShapeException, NonInvertibleTransformException
- dissociate LineArc2D from other line classes


javaGeom-0.6.1 (2008-05-24, rev. 137)

Start implementing 3D methods, revision of package hierarchy.

geom2d:
- splitted curve subpackage into curve and domain subpackages
- fixed clipping of closed curves, and implemented clipping methods in the
	specific class 'CurveUtil' and 'Boundary2DUtil'.
- simplified hierarchy of affine transforms, to keep only one concrete class.
- added method Shape2D.isEmpty()
- lot of rewriting in Box2D:
	+ Box2D does not implement PolygonalShape2D anymore
	+ better support of infinite boxes
- removed Dimension2D (useless)

geom3d:
- added several classes:
	+ Vector3D, Box3D, PointSet3D, and EmptySet3D
	+ /curve: Curve3d, ContinuousCurve3D
	+ /line: StraightLine3D, LineSegment3D
	+ /plane: Plane3D



javaGeom-0.6.0 (2008-03-08, rev. 115)

- changed package hierarchy, by dividing geom2d into several subpackages
- implemented Iterable for PointSet2D and CurveSet2D
- introduced SmoothOrientedCurve2D interface
- curve: add method Curve2D.project(Point2D), different from the method
	Curve2D.getPosition(Point2D), for better computation of curve clipping.
- improved implementation of Hyperbola2D and Parabola2D, and their respective
	arcs
- various code cleanup


javaGeom-0.5.2 (2008-01-17, rev. 93)

- Clipping of smooth curves has been improved
- Function "shape2D.getClippedShape()" have been renamed to
	"Shape2D.clip()", and clipping procedures have been improved
- Replace Math.sqrt() by Math.hypot(), to make computations more robust
- Vector2D is more robust for checking colinearity and orthogonality