@@ -30,9 +30,7 @@ import java.awt.*;
 import javax.swing.*;
 
 import math.geom2d.*;
-import math.geom2d.curve.Curve2D;
 import math.geom2d.domain.Boundary2D;
-import math.geom2d.domain.Boundary2DUtils;
 import math.geom2d.polygon.SimplePolygon2D;
 
 
@@ -68,17 +66,12 @@ public class CheckPolygon2D_Clip extends JPanel{
 		g2.draw(box.getAsRectangle());
 
 		Boundary2D boundary = polygon.getBoundary();
-		Curve2D clipped = boundary.clip(box);
-		g2.setStroke(new BasicStroke(4.0f));
-		g2.setColor(Color.RED);
-		g2.draw(clipped);
 
-		clipped = Boundary2DUtils.clipBoundary(boundary, box);
-		g2.setStroke(new BasicStroke(2.0f));
 		g2.setColor(Color.CYAN);
-		g2.fill(clipped);
+		g2.fill(boundary.getDomain().clip(box));
 		g2.setColor(Color.BLUE);
-		g2.draw(clipped);
+		g2.setStroke(new BasicStroke(2.0f));
+		g2.draw(boundary.clip(box));
 	}
 
 	public final static void main(String[] args){
